Server/enrollment/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enrollment-service
spec:
  selector:
    app: enrollment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
