Server/enrollment/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enrollment-ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "3600"
spec:
  rules:
  - host: enrollment.nicolascerpa.cl
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: enrollment-service
              port:
                number: 80
